# world-cup-forecaster

./: .dockerignore  .gitattributes  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  app.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  research.yml
.github/workflows/: ci.yml  release.yml
artifacts/: advanced_experiment_matrix.csv  advanced_report.json  architecture_benchmark.csv  blind_team_leaderboard.csv  data_coverage.csv  enrichment_benchmark.csv  event_benchmark.csv  feature_ablation.csv  feature_drift.csv  lineup_benchmark.csv  report.json  simulation_2026.csv  squad_2026_analytics.csv  squad_2026_players.csv  turkiye_2026.csv  turkiye_blind_forecast.csv  turkiye_scenarios.csv  weather_benchmark.csv  world_cup_2026_blind_forecast.csv
configs/: baseline_v2.toml  promotion.toml
docs/: ADVANCED_EXPERIMENTS.md  DATA_CARD.md  DATA_SOURCES.md  MODEL_CARD.md
experiments/baseline_v2/: README.md  checksums.json
experiments/baseline_v2/artifacts/: backtest_predictions.csv  benchmark_ladder.csv  model.joblib  predictions_2026.csv  report.json  turkiye_blind_forecast.csv  world_cup_2026_blind_forecast.csv
release/: runtime-manifest.json
scripts/: build_release_bundle.py
src/worldcup_predictor/: __init__.py  advanced_pipeline.py  analytics.py  api.py  architectures.py  artifacts.py  conditions.py  config.py  data.py  enrichment.py  evaluation.py  event_data.py  experiments.py  features.py  lineup_data.py  model.py  pipeline.py  promotion.py  publication_advanced.py  reporting.py  simulation.py  squad_analytics.py
src/worldcup_predictor/ui/: __init__.py  components.py  data.py
src/worldcup_predictor/ui/pages/: __init__.py  turkey.py
tests/: test_advanced_features.py  test_analytics.py  test_api.py  test_artifacts.py  test_dashboard.py  test_enrichment.py  test_features.py  test_model.py  test_promotion.py  test_simulation.py
